RESOLVED FIXED112748
[BlackBerry] Selection overlay is sometimes in wrong position.
https://bugs.webkit.org/show_bug.cgi?id=112748
Summary [BlackBerry] Selection overlay is sometimes in wrong position.
Andrew Lo
Reported 2013-03-19 15:01:47 PDT
Text selection overlay can be in the incorrect position.
Attachments
Patch (1.67 KB, patch)
2013-03-19 15:08 PDT, Andrew Lo
no flags
Andrew Lo
Comment 1 2013-03-19 15:08:02 PDT
Rob Buis
Comment 2 2013-03-19 15:20:40 PDT
Comment on attachment 193933 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2013-03-19 16:48:51 PDT
Comment on attachment 193933 [details] Patch Clearing flags on attachment: 193933 Committed r146278: <http://trac.webkit.org/changeset/146278>
WebKit Review Bot
Comment 4 2013-03-19 16:48:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.