[BlackBerry] Selection overlay is sometimes in wrong position. https://bugs.webkit.org/show_bug.cgi?id=112748

Patch by Andrew Lo <anlo@rim.com> on 2013-03-19
Reviewed by Rob Buis.
Internally reviewed by Arvid Nilsson.

Internal PR 305384.
Translate by parent's offset when drawing selection overlay.

* WebKitSupport/SelectionOverlay.cpp:
(BlackBerry::WebKit::SelectionOverlay::paintContents):

Canonical link: https://commits.webkit.org/131073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146278 268f45cc-cd09-0410-ab3c-d52691b4dbfc